--- a/Alugueis de Carros-MPA/package.json
+++ b/Alugueis de Carros-MPA/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "auth": "^0.0.9",
     "basic": "^2.0.3",
+    "cookie-session": "^2.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-basic-auth": "^1.2.1",
