--- a/Alugueis de Carros-MPA/package.json
+++ b/Alugueis de Carros-MPA/package.json
@@ -11,6 +11,8 @@
     "auth": "^0.0.9",
     "basic": "^2.0.3",
     "basic-auth": "^2.0.1",
+    "connect-mongo": "^5.0.0",
+    "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
